--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -4,8 +4,34 @@
     }
 }
 
-@media (max-height: 760px) {
+@media (max-width: 900px) and (max-height: 750px) {
+    :root {
+        --icon-size: 18px;
+    }
+
     #main-box .profile-pic {
         width: 0;
+    }
+
+    #main-box .content-block h1 {
+        margin-top: -10px;
+    }
+
+    #main-box .content-block p {
+        font-size: 16px;
+    }
+}
+
+@media (min-width: 900px) and (max-height: 750px) {
+    :root {
+        --icon-size: 18px;
+    }
+
+    #main-box .content-block h1 {
+        margin-top: -10px;
+    }
+
+    #main-box .content-block p {
+        font-size: 16px;
     }
 }
